style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
body,html {
    border: 0;
    margin: 0;
}
body {
    background-color: black;
    font-family: "Roboto" , sans-serif;
}
.header {
    display: flex;
    height: 2.5rem;
    padding:15px;
    background-color: #e5a00d;
    margin-bottom: 20px;
    box-shadow: 3px 3px 10px rgb(172, 169, 169);
    text-shadow: 2px 2px 5px rgb(104, 104, 104);
    font-size: 2rem;
    justify-content: center;
    align-items: center;
}
.library {
    padding: 10px;
    display: grid;
    gap:15px;
    --widthOfBooks: minmax(15vw,1fr);
    grid-template-columns: repeat(auto-fill,var(--widthOfBooks));
    grid-auto-rows: clamp(450px,50vh,700px);

}
.addBook, .book {
    display: flex;
    cursor: pointer;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 5px inset #d3970c;
    background-color: rgb(61, 61, 61);
    text-shadow: 0 0 2px black;
    font-size:50px;
    color:grey;
    overflow: hidden;
}
.modal,.modal_edit {
    --width: clamp(150px,20vw,200px);
    width: var(--width);
    --width-half: var(--width) / 2;
    min-height:350px;
    padding:15px;
    border: 1px solid rgb(255, 255, 255);
    display: none;
    position: absolute;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    z-index: 1;
    top: calc(50vh - 175px);
    left: calc(50vw - var(--width-half));
    background-color: grey;
}
input[type="submit"]{
    border: none;
    background-color: rgb(68, 68, 68);
    width:150px;
    height: 30px;
}
input {
    width: 150px;
    outline: none;
}
input[type="radio"]{
    width: fit-content;
}
input[type="submit"]:hover, input[type="submit"]:focus {
    background-color: rgb(187, 187, 187);
}
input:focus {
    border-color: rgb(14, 14, 247);
}
input:invalid {
    background-color: rgb(241, 146, 146);
    border-color: red;
}
fieldset {
    border: none;
    gap:10px;
    display: flex;
    flex-direction: column;
}
.modalHeader {
    font-size: 2.5rem;
    height: 2.5rem;
    flex-shrink: 0;
    z-index: 1;
    align-self: flex-end;
    cursor:pointer;
}
.modal_background {
    display: none;
    position: absolute;
    top: 0px;
    left: 0px;
    height: 100vh;
    width:100vw;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 1;
}
.modalHeader:hover {
    color:#ffffff;
}
.addBook:hover, .book:hover, .addBook:focus, .book:focus {
    background-color: rgb(82, 81, 81);
    box-shadow: 0px 0px 20px #ffa31a;
    box-shadow: 0px 0px 20px #ffa31a;
}
.modalFooter {
    height: 2.5rem;
    flex-shrink: 0;
}
.book {
    position: relative;
    font-size: 1.2rem;
}
.bookTextWrapperContainer {
    margin-bottom: 50px;
    display: flex;
    gap:15px;
    flex-direction: column;
    align-items: center;
    width: clamp(20px,15vw,400px);
    overflow: scroll;
}
.text-for-book {
    text-align: center;
}
.deleteBookButton {
    align-self: flex-end;
    position: absolute;
    right: 4px;
    top: 2px;
    cursor: pointer;
    font-size: 2rem;
}
.deleteBookButton:hover, .deleteBookButton:focus {
    color:rgb(173, 173, 173);
    text-shadow: 0 0 2px rgb(255, 255, 255);
}
textarea {
    resize: none;
}
.modal_edit {
    min-height: 425px;
}

